--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yuval Maderer | Full Stack Developer & Web Solutions</title>
-    <meta name="description" content="Full Stack Developer specializing in modern web development, e-commerce solutions, and custom applications. React, TypeScript, Node.js expert." />
+    <meta
+      name="description"
+      content="Full Stack Developer specializing in modern web development, e-commerce solutions, and custom applications. React, TypeScript, Node.js expert."
+    />
     <meta name="author" content="Yuval Maderer" />
-    <meta name="keywords" content="Full Stack Developer, Web Developer, React, TypeScript, Node.js, E-commerce, Portfolio" />
+    <meta
+      name="keywords"
+      content="Full Stack Developer, Web Developer, React, TypeScript, Node.js, E-commerce, Portfolio"
+    />
 
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Yuval Maderer | Full Stack Developer" />
-    <meta property="og:description" content="Building modern web experiences and technological solutions that drive business growth" />
+    <meta
+      property="og:description"
+      content="Building modern web experiences and technological solutions that drive business growth"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/opengraph-image.png" />
+    <!-- תמונת Preview שלך -->
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@YuvalMaderer" />
+    <meta name="twitter:image" content="/opengraph-image.png" />
+
+    <!-- Favicon עם האות Y בצבע כחול -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
