--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+      src="https://cdn.userway.org/widget.js"
+      data-account="kPKQzVkX7v"
+    ></script>
     <!-- Google tag (gtag.js) -->
     <script
       async
